// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Iframe className 1`] = `
<div
  className="uu5-bricks-iframe my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe controlled 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe controlled 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe controlled 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe controlled 4`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe default props 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe disabled 1`] = `
<div
  className="uu5-bricks-iframe uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Iframe disabled 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe disabled 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe disabled 4`] = `
<div
  className="uu5-bricks-iframe uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Iframe docKit examples UU5.Bricks.Iframe example01 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    className={null}
    colWidth="s6"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID2"
    ignoreInnerHTML={false}
    key="uuID2"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
    width={null}
  >
    <Iframe
      className={null}
      controlled={true}
      disabled={false}
      height="250"
      hidden={false}
      id="uuID3"
      iframeAttrs={Object {}}
      inline={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      resize={false}
      selected={false}
      src="https://unicorn.com"
      style={null}
      syncTimeout={1}
      tooltip={null}
    />
  </Column>
  <Column
    className={null}
    colWidth="s6"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    footer={null}
    header={null}
    hidden={false}
    id="uuID4"
    ignoreInnerHTML={false}
    key="uuID4"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    noSpacing={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
    width={null}
  >
    <Iframe
      className={null}
      controlled={true}
      disabled={false}
      height="250"
      hidden={false}
      id="uuID5"
      iframeAttrs={Object {}}
      inline={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      resize={false}
      selected={false}
      src="https://plus4u.net"
      style={null}
      syncTimeout={1}
      tooltip={null}
    />
  </Column>
</div>
`;

exports[`UU5.Bricks.Iframe height 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe height 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe height 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe height 4`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe hidden 1`] = `
<div
  className="uu5-bricks-iframe uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe hidden 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe hidden 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe hidden 4`] = `
<div
  className="uu5-bricks-iframe uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe id 1`] = `
<div
  className="uu5-bricks-iframe"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe iframeAttrs 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe inline 1`] = `
<div
  className="uu5-bricks-iframe uu5-bricks-iframe-inline"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe inline 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe inline 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe inline 4`] = `
<div
  className="uu5-bricks-iframe uu5-bricks-iframe-inline"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe mainAttrs 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe name 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 4`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 5`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 6`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 7`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 8`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 9`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 10`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 11`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 12`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 13`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 14`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Iframe nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Iframe nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Iframe nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Iframe nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Iframe nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Iframe noIndex 1`] = `
<div
  className="uu5-bricks-iframe uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe noIndex 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe noIndex 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe noIndex 4`] = `
<div
  className="uu5-bricks-iframe uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe pureRender 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe pureRender 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe pureRender 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe pureRender 4`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe resize 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Loading
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    inline={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Iframe resize 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Loading
    className={null}
    colorSchema={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    inline={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Iframe resize 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe resize 4`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe selected 1`] = `
<div
  className="uu5-bricks-iframe uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe selected 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe selected 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe selected 4`] = `
<div
  className="uu5-bricks-iframe uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe src 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe style 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe style 2`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe style 3`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe style 4`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe syncTimeout 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Iframe tooltip 1`] = `
<div
  className="uu5-bricks-iframe"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
